Added tooltips, first iteration.

--- a/css/input.css
+++ b/css/input.css
@@ -206,3 +206,24 @@ input[type="text"].cyan:focus,
 .input-group.small { font-size: 12px; }
 .input-group.medium { font-size: 14px; }
 .input-group.large { font-size: 18px; }
+
+/*
+	Tooltips
+ */
+
+div.tooltip {
+	transition: opacity 0.15s;
+
+	opacity: 0;
+	display: block;
+	font-size: 14px;
+	line-height: 1.5;
+	padding: 0.25em 0.5em;
+	border-radius: 0.25rem;
+	color: var(--colors-white);
+	background-color: var(--colors-dark-white);
+	background-size: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
