--- a/css/animations.css
+++ b/css/animations.css
@@ -32,23 +32,23 @@
 }
 
 @keyframes fade-from-left {
-    from { right: 4em; opacity: 0; }
-    to   { right: 0em; opacity: 1; }
+    from { right: 2rem; opacity: 0; }
+    to   { right: 0rem; opacity: 1; }
 }
 
 @keyframes fade-from-top {
-    0%   { bottom: 4em; }
-    100% { bottom: 0em; }
+    0%   { bottom: 2rem; opacity: 0; }
+    100% { bottom: 0rem; opacity: 1; }
 }
 
 @keyframes fade-from-right {
-    0%   { left: 4em; }
-    100% { left: 0em; }
+    0%   { left: 2rem; opacity: 0; }
+    100% { left: 0rem; opacity: 1; }
 }
 
 @keyframes fade-from-bottom {
-    0%   { top: 4em; }
-    100% { top: 0em; }
+    0%   { top: 2rem; opacity: 0; }
+    100% { top: 0rem; opacity: 1; }
 }
 
 @keyframes loading-spin-static {
@@ -111,15 +111,10 @@
     opacity: 0;
 }
 
-.animate-fade-from-left, .fade-from-left-on-load     { right:  4em; }
-.animate-fade-from-top, .fade-from-top-on-load       { bottom: 4em; }
-.animate-fade-from-right, .fade-from-right-on-load   { left:   4em; }
-.animate-fade-from-bottom, .fade-from-bottom-on-load { top:    4em; }
-
-*:not(.animation-group) [class *= "fade-from-left-on-load"]   { animation: fade-from-left   0.25s linear 0s 1 normal both; }
-*:not(.animation-group) [class *= "fade-from-top-on-load"]    { animation: fade-from-top    0.25s linear 0s 1 normal both; }
-*:not(.animation-group) [class *= "fade-from-right-on-load"]  { animation: fade-from-right  0.25s linear 0s 1 normal both; }
-*:not(.animation-group) [class *= "fade-from-bottom-on-load"] { animation: fade-from-bottom 0.25s linear 0s 1 normal both; }
+.animate-fade-from-left,   .fade-from-left-on-load   { animation: fade-from-left   0.25s ease-out 0s 1 normal both; }
+.animate-fade-from-top,    .fade-from-top-on-load    { animation: fade-from-top    0.25s ease-out 0s 1 normal both; }
+.animate-fade-from-right,  .fade-from-right-on-load  { animation: fade-from-right  0.25s ease-out 0s 1 normal both; }
+.animate-fade-from-bottom, .fade-from-bottom-on-load { animation: fade-from-bottom 0.25s ease-out 0s 1 normal both; }
 
 /* Page Fades */
 
