--- a/css/navigation.css
+++ b/css/navigation.css
@@ -18,6 +18,60 @@
 */
 
 /*
+	Navbar Menu
+ */
+
+ div.menu {
+	display: flex;
+}
+
+div.menu a {
+	text-decoration: none !important;
+	padding: 0.5em 1em;
+	position: relative;
+}
+
+div.menu-auto {
+	width: 100%;
+}
+
+div.menu-auto > * {
+	flex: 1 1 auto;
+	text-align: center;
+}
+
+div.menu-left {
+	float: left;
+}
+
+div.menu-center:not(.menu-auto) {
+	display: table;
+	width: 100%;
+	text-align: center;
+}
+
+div.menu-center:not(.menu-auto) a {
+	text-align: center;
+	width: 100%;
+	display: block;
+}
+
+div.menu-right {
+	float: right;
+}
+
+div.menu-fixed {
+	position: fixed;
+	z-index: 99;
+}
+
+@media (min-width: 776px) {
+	div.menu:not(.menu-auto) a {
+		display: inline;
+	}
+}
+
+/*
 	Navbar
  */
 
@@ -28,8 +82,7 @@
 	top: 0;
 	left: 0;
 	color: var(--colors-black);
-
-	box-shadow: 0px 2px 2px 0px var(--colors-bright-black);
+	z-index: 99;
 }
 
 .navbar-item {
@@ -58,7 +111,11 @@
 
 /* Navbar styles */
 
-.navbar.auto .navbar-item {
+.navbar-fixed {
+	position: fixed;
+}
+
+.navbar-auto .navbar-item {
 	flex: 1 1 auto;
 	text-align: center;
 }
@@ -83,11 +140,11 @@
 		display: flex;
 	}
 
-	.navbar-small:not(.auto):not(.vertical) .navbar-item {
+	.navbar-small:not(.navbar-auto):not(.vertical) .navbar-item {
 		flex: 0 0 auto;
 	}
 
-	.navbar-small:not(.auto):not(.vertical) a {
+	.navbar-small:not(.navbar-auto):not(.vertical) a {
 		display: flex;
 	}
 }
@@ -97,11 +154,11 @@
 		display: flex;
 	}
 
-	.navbar-medium:not(.auto):not(.vertical) .navbar-item {
+	.navbar-medium:not(.navbar-auto):not(.vertical) .navbar-item {
 		flex: 0 0 auto;
 	}
 
-	.navbar-medium:not(.auto):not(.vertical) a {
+	.navbar-medium:not(.navbar-auto):not(.vertical) a {
 		display: flex;
 	}
 }
@@ -111,11 +168,11 @@
 		display: flex;
 	}
 
-	.navbar-large:not(.auto):not(.vertical) .navbar-item {
+	.navbar-large:not(.navbar-auto):not(.vertical) .navbar-item {
 		flex: 0 0 auto;
 	}
 
-	.navbar-large:not(.auto):not(.vertical) a {
+	.navbar-large:not(.navbar-auto):not(.vertical) a {
 		display: flex;
 	}
 }
@@ -125,11 +182,11 @@
 		display: flex;
 	}
 
-	.navbar-mega:not(.auto):not(.vertical) .navbar-item {
+	.navbar-mega:not(.navbar-auto):not(.vertical) .navbar-item {
 		flex: 0 0 auto;
 	}
 
-	.navbar-mega:not(.auto):not(.vertical) a {
+	.navbar-mega:not(.navbar-auto):not(.vertical) a {
 		display: flex;
 	}
 }
@@ -153,10 +210,10 @@
 
 /* Color schemes */
 
-.navbar-black { background-color: var(--colors-black); }
-.navbar-red { background-color: var(--colors-red); }
-.navbar-green { background-color: var(--colors-green); }
-.navbar-yellow { background-color: var(--colors-yellow); }
-.navbar-blue { background-color: var(--colors-blue); }
+.navbar-black   { background-color: var(--colors-black); }
+.navbar-red     { background-color: var(--colors-red); }
+.navbar-green   { background-color: var(--colors-green); }
+.navbar-yellow  { background-color: var(--colors-yellow); }
+.navbar-blue    { background-color: var(--colors-blue); }
 .navbar-magenta { background-color: var(--colors-magenta); }
-.navbar-cyan { background-color: var(--colors-cyan); }
+.navbar-cyan    { background-color: var(--colors-cyan); }
