--- a/css/placement.css
+++ b/css/placement.css
@@ -33,6 +33,18 @@
     margin: 3em auto 3em auto;
 }
 
+.container-fullscreen {
+    width: 100%;
+    height: 100%;
+    padding-top: 1em;
+}
+
+.container-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width:575px) {
 	.container {
         padding-left: 0.5em;
@@ -85,7 +97,16 @@
     margin-right: auto;
 }
 
+.center-vertical {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 img.center {
+    display: block;
+}
+
+button.center {
     display: block;
 }
 
