--- a/css/input.css
+++ b/css/input.css
@@ -82,6 +82,7 @@ input[type="password"] {
 	border-radius: 3px;
 	padding-left: 0.5em;
 	font-size: inherit;
+	line-height: 2;
 }
 
 input[type="text"]:focus,
@@ -108,6 +109,12 @@ input[type="text"].large, .large input[type="text"],
 input[type="email"].large, .large input[type="email"],
 input[type="password"].large, .large input[type="password"] {
 	font-size: 18px;
+}
+
+input[type="text"].mega, .mega input[type="text"],
+input[type="email"].mega, .mega input[type="email"],
+input[type="password"].mega, .mega input[type="password"] {
+	font-size: 24px;
 }
 
 /* Text Field colors */
@@ -214,27 +221,7 @@ input[type="password"].cyan:focus, .cyan input[type="password"]:focus {
 	margin-left: 2px;
 }
 
-.input-group.small { font-size: 12px; }
+.input-group.small  { font-size: 12px; }
 .input-group.medium { font-size: 14px; }
-.input-group.large { font-size: 18px; }
-
-/*
-	Tooltips
- */
-
-div.tooltip {
-	transition: opacity 0.15s;
-
-	opacity: 0;
-	display: block;
-	font-size: 14px;
-	line-height: 1.5;
-	padding: 0.25em 0.5em;
-	border-radius: 0.25rem;
-	color: var(--colors-white);
-	background-color: var(--colors-dark-white);
-	background-size: cover;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
+.input-group.large  { font-size: 18px; }
+.input-group.mega   { font-size: 24px; }
