--- a/css/misc.css
+++ b/css/misc.css
@@ -18,6 +18,57 @@
 */
 
 /*
+	Tooltips
+ */
+
+.tooltip {
+	position: relative;
+	display: inline;
+}
+
+.tooltip p {
+	transition: opacity 0.25s;
+
+	min-width: 100px;
+	opacity: 0;
+	position: absolute;
+	padding: 0.25rem;
+	border-radius: 3px;
+	color: var(--colors-white);
+	background-color: var(--colors-black);
+	z-index: 99;
+	
+	text-align: center;
+	vertical-align: middle;
+}
+
+.tooltip:hover p {
+	opacity: 1;
+}
+
+/* Positions */
+
+.tooltip.tooltip-bottom p {
+	top: 150%;
+	left: -50%;
+}
+
+.tooltip.tooltip-top p {
+	bottom: 150%;
+	left: 0%;
+}
+
+.tooltip.tooltip-right p {
+	left: 110%;
+	top: -50%;
+}
+
+.tooltip.tooltip-left p {
+	right: 110%;
+	top: -50%;
+}
+
+/*
 	Code fields
  */
 
